<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('symptoms', function (Blueprint $table): void {
            $table->id();
            $table->foreignId('user_id')->constrained()->cascadeOnDelete();
            $table->string('name');
            $table->enum('severity', ['mild', 'moderate', 'severe']);
            $table->text('description')->nullable();
            $table->date('date_recorded');
            $table->text('notes')->nullable();
            $table->timestamps();

            $table->index(['user_id', 'date_recorded']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('symptoms');
    }
};
