@startuml
class User {
  id: int
  name: string
  email: string
  password: string
}

class Symptom {
  id: int
  user_id: int
  name: string
  severity: string
  description: text
  date_recorded: date
  notes: text
}

class Doctor {
  id: int
  name: string
  specialty: string
  city: string
  years_of_experience: int
  consultation_price: decimal
  available_days: json
}

class Appointment {
  id: int
  user_id: int
  doctor_id: int
  appointment_date: datetime
  status: string
  notes: text
}

class AiAdvice {
  id: int
  user_id: int
  advice: text
  generated_at: datetime
  symptoms_snapshot: json
}

User "1" -- "*" Symptom
User "1" -- "*" Appointment
User "1" -- "*" AiAdvice
Doctor "1" -- "*" Appointment
@enduml
